src/test/egern/success/nested_function_call.egern
func sum(a, b) {
    return a + b;
}
var c = sum(sum(1, 2), sum(3, sum(4, 2)));
print(c);
