src/test/egern/fail/too_many_args_fail.egern
func abc(a: int, b: int, c: int): int {
    print(a);
    var x = b;
    return c;
}

var x = y = 3;
print(abc(2, x, y, 4));
